manifests/demo-manifests/llm-demo.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: llm-demo
  labels:
    kubernetes.io/metadata.name: llm-demo
    modelmesh-enabled: 'false'
    opendatahub.io/dashboard: 'true'
spec:
  finalizers:
    - kubernetes
