manifests/demo-manifests/llm.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: llm
  labels:
    kubernetes.io/metadata.name: llm-demo
    modelmesh-enabled: 'false'
    opendatahub.io/dashboard: 'true'
    maas.opendatahub.io/gateway-access: 'true'
spec:
  finalizers:
    - kubernetes
