manifests/demo-manifests/lls-rag.yaml
kind: StatefulSet
apiVersion: apps/v1
metadata:
  name: pgvector
  labels:
    app.kubernetes.io/instance: rag
    app.kubernetes.io/name: pgvector
    app.kubernetes.io/version: 1.16.0
spec:
  serviceName: ''
  revisionHistoryLimit: 10
  persistentVolumeClaimRetentionPolicy:
    whenDeleted: Retain
    whenScaled: Retain
  volumeClaimTemplates:
    - kind: PersistentVolumeClaim
      apiVersion: v1
      metadata:
        name: pg-data
        creationTimestamp: null
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 5Gi
        volumeMode: Filesystem
      status:
        phase: Pending
  template:
    metadata:
      creationTimestamp: null
      labels:
        app.kubernetes.io/instance: rag
        app.kubernetes.io/name: pgvector
        app.kubernetes.io/version: 1.16.0
    spec:
      restartPolicy: Always
      serviceAccountName: default
      schedulerName: default-scheduler
      terminationGracePeriodSeconds: 30
      securityContext: {}
      containers:
        - resources: {}
          readinessProbe:
            exec:
              command:
                - /bin/sh
                - '-c'
                - |
                  for db in "$POSTGRES_DBNAME"; do
                    pg_isready -U "$POSTGRES_USER" -d "$db" -h 127.0.0.1 -p "$POSTGRES_PORT" || exit 1
                  done
            timeoutSeconds: 1
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          terminationMessagePath: /dev/termination-log
          name: pgvector
          ports:
            - name: http
              containerPort: 5432
              protocol: TCP
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: initdb-volume
              mountPath: /docker-entrypoint-initdb.d
            - name: pg-data
              mountPath: /var/lib/postgresql
          terminationMessagePolicy: File
          image: 'docker.io/pgvector/pgvector:pg17'
      serviceAccount: default
      volumes:
        - name: initdb-volume
          configMap:
            name: pgvector-initsql
            defaultMode: 420
      dnsPolicy: ClusterFirst
  podManagementPolicy: OrderedReady
  replicas: 1
  updateStrategy:
    type: RollingUpdate
    rollingUpdate:
      partition: 0
  selector:
    matchLabels:
      app.kubernetes.io/instance: rag
      app.kubernetes.io/name: pgvector
---
kind: Service
apiVersion: v1
metadata:
  name: pgvector
  labels:
    app.kubernetes.io/instance: rag
    app.kubernetes.io/name: pgvector
    app.kubernetes.io/version: 1.16.0
spec:
  ipFamilies:
    - IPv4
  ports:
    - name: http
      protocol: TCP
      port: 5432
      targetPort: http
  internalTrafficPolicy: Cluster
  type: ClusterIP
  ipFamilyPolicy: SingleStack
  sessionAffinity: None
  selector:
    app.kubernetes.io/instance: rag
    app.kubernetes.io/name: pgvector
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: llamastack
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: rag
      app.kubernetes.io/name: llamastack
  template:
    metadata:
      creationTimestamp: null
      labels:
        app.kubernetes.io/instance: rag
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/name: llamastack
        app.kubernetes.io/version: 0.5.0
        helm.sh/chart: llama-stack-0.5.0
    spec:
      restartPolicy: Always
      serviceAccountName: default
      schedulerName: default-scheduler
      terminationGracePeriodSeconds: 30
      securityContext: {}
      containers:
        - resources: {}
          terminationMessagePath: /dev/termination-log
          name: llama-stack
          command:
            - python
            - '-m'
            - llama_stack.core.server.server
            - /app-config/config.yaml
          securityContext: {}
          ports:
            - name: http
              containerPort: 8321
              protocol: TCP
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: run-config-volume
              mountPath: /app-config
            - name: dot-llama
              mountPath: /.llama
            - name: cache
              mountPath: /.cache
          terminationMessagePolicy: File
          image: 'llamastack/distribution-starter:0.2.22'
      serviceAccount: default
      volumes:
        - name: run-config-volume
          configMap:
            name: run-config
            defaultMode: 420
        - name: dot-llama
          persistentVolumeClaim:
            claimName: llama-stack-data
        - name: cache
          emptyDir: {}
      dnsPolicy: ClusterFirst
  strategy:
    type: Recreate
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 3600
---
kind: Service
apiVersion: v1
metadata:
  name: llamastack
  labels:
    app.kubernetes.io/instance: rag
    app.kubernetes.io/name: llamastack
    app.kubernetes.io/version: 0.5.0
spec:
  ipFamilies:
    - IPv4
  ports:
    - name: http
      protocol: TCP
      port: 8321
      targetPort: 8321
  internalTrafficPolicy: Cluster
  type: ClusterIP
  ipFamilyPolicy: SingleStack
  sessionAffinity: None
  selector:
    app.kubernetes.io/instance: rag
    app.kubernetes.io/name: llamastack
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: rag
  labels:
    app.kubernetes.io/instance: rag
    app.kubernetes.io/name: rag
    app.kubernetes.io/version: 0.2.22
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: rag
      app.kubernetes.io/name: rag
  template:
    metadata:
      creationTimestamp: null
      labels:
        app.kubernetes.io/instance: rag
        app.kubernetes.io/name: rag
        app.kubernetes.io/version: 0.2.22
    spec:
      restartPolicy: Always
      serviceAccountName: default
      schedulerName: default-scheduler
      terminationGracePeriodSeconds: 30
      securityContext: {}
      containers:
        - resources: {}
          readinessProbe:
            httpGet:
              path: /
              port: http
              scheme: HTTP
            timeoutSeconds: 1
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          terminationMessagePath: /dev/termination-log
          name: rag
          livenessProbe:
            httpGet:
              path: /
              port: http
              scheme: HTTP
            timeoutSeconds: 1
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          ports:
            - name: http
              containerPort: 8501
              protocol: TCP
          imagePullPolicy: Always
          volumeMounts:
            - name: dot-streamlit
              mountPath: /.streamlit
          terminationMessagePolicy: File
          image: 'quay.io/rh-ai-quickstart/llamastack-dist-ui:0.2.22'
      serviceAccount: default
      volumes:
        - name: dot-streamlit
          emptyDir: {}
      dnsPolicy: ClusterFirst
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
---
kind: Service
apiVersion: v1
metadata:
  name: rag
  labels:
    app.kubernetes.io/instance: rag
    app.kubernetes.io/name: rag
    app.kubernetes.io/version: 0.2.22
spec:
  ipFamilies:
    - IPv4
  ports:
    - name: http
      protocol: TCP
      port: 8501
      targetPort: http
  internalTrafficPolicy: Cluster
  type: ClusterIP
  ipFamilyPolicy: SingleStack
  sessionAffinity: None
  selector:
    app.kubernetes.io/instance: rag
    app.kubernetes.io/name: rag
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: rag
  labels:
    app.kubernetes.io/instance: rag
    app.kubernetes.io/name: rag
    app.kubernetes.io/version: 0.2.22
spec:
  to:
    kind: Service
    name: rag
    weight: 100
  port:
    targetPort: 8501
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
